# dbt-conversation-ai-local

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  dashboard_app.py  dbt_project.yml  profiles.yml  pyproject.toml  requirements.txt  streamlit_app.py
.streamlit/: config.toml
analyses/: customer_ltv_analysis.sql  geographic_analysis.sql  order_trends_analysis.sql
macros/: customer_segment.sql  date_components.sql  order_count_by_status.sql  order_status_counts.sql
models/: metricflow_time_spine.sql  metricflow_time_spine.yml
models/marts/: fct_customers.sql  fct_daily_orders.sql  fct_daily_orders_schema.yml  fct_orders.sql  fct_revenue_by_state.sql  schema.yml
models/semantic_layer/: additional_metrics.yml  additional_semantic_models.yml  metrics.yml  semantic_models.yml
models/staging/: schema.yml  stg_customers.sql  stg_orders.sql
rill-dashboard/: README.md  customers.parquet  daily_orders.parquet  rill.yaml  rill.yml  state_revenue.parquet
rill-dashboard/connectors/: duckdb.yaml
rill-dashboard/dashboards/: orders_analytics.yml  orders_analytics_canvas.yaml  orders_analytics_explore.yaml  orders_exec_pack_canvas.yaml
rill-dashboard/data/: fct_orders.parquet
rill-dashboard/metrics/: orders_analytics_metrics.yaml
rill-dashboard/models/: customers.sql  (+4 more)
scripts/: check_mcp_tools.py  check_setup.py  check_tools.py  fix_dbt_sl.sh  run_app.sh  test_mcp_tools.py  test_ollama.py  verify_mcp_integration.py  verify_streamlit_tools.py
seeds/: raw_customers.csv  raw_orders.csv
snapshots/: orders_snapshot.sql
tests/: test_e2e.py
(+4 files in other folders)
